Fixed user and shift page not rerendering when swapping uuid or username

--- a/src/App.scss
+++ b/src/App.scss
@@ -53,6 +53,14 @@ label {
     object-fit: contain;
 }
 
+.forceTextWrap { 
+    white-space: pre-wrap;      /* CSS3 */   
+    white-space: -moz-pre-wrap; /* Firefox */    
+    white-space: -pre-wrap;     /* Opera <7 */   
+    white-space: -o-pre-wrap;   /* Opera 7 */    
+    word-wrap: break-word;      /* IE */
+}
+
 
 //Border Radius
 .borderRadius-1{
